--- a/src/App.scss
+++ b/src/App.scss
@@ -5,22 +5,22 @@
   //text-align: center;
 }
 
-.logo {
+.logo1 {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
 
-.logo:hover {
+.logo1:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 
-.logo.react:hover {
+.logo1.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
+@keyframes logo1-spin {
   from {
     transform: rotate(0deg);
   }
@@ -30,19 +30,13 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  a:nth-of-type(2) .logo1 {
+    animation: logo1-spin infinite 20s linear;
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 
 h1 {
   color: $red;
+  //@apply text-bold;
 }
