--- a/src/main.css
+++ b/src/main.css
@@ -13,14 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+/*a {*/
+/*  font-weight: 500;*/
+/*  color: #646cff;*/
+/*  text-decoration: inherit;*/
+/*}*/
+/*a:hover {*/
+/*  color: #535bf2;*/
+/*}*/
 
 body {
   margin: 0;
@@ -29,3 +29,7 @@ body {
   /*min-width: 320px;*/
   /*min-height: 100vh;*/
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
